...
        android:id="@+id/menu_save"
        android:icon="@drawable/ic_save_white"
        android:title="@string/save_all_answers"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_goto"
        android:icon="@drawable/baseline_format_list_bulleted_24"
        android:title="@string/view_hierarchy"
        app:showAsAction="always" />

    <item
        android:id="@+id/track_location"
...
