...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <org.odk.collect.androidshared.ui.multiclicksafe.MultiClickSafeButton
            android:id="@+id/jumpBeginningButton"
            style="@style/Widget.Collect.Button.BottomOption"
            android:layout_marginLeft="@dimen/margin_extra_small"
            android:layout_marginRight="@dimen/margin_extra_small"
            android:text="@string/jump_to_beginning"
            android:textColor="@color/colorWhite" />

...
